# biodynamo

./: BioDynaMo_Final_Success_Summary.md  BioDynaMo_ROOT_Replacement_Strategy.md  BioDynaMo_ROOT_Replacement_Summary.md  BioDynaMo_ROOT_Usage_Analysis.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PR_INSTRUCTIONS.md  PULL_REQUEST_DESCRIPTION.md  REFACTORING_COMPLETE.md  SIMPLE_VISUALIZATION.md  STANDALONE_VISUALIZATION_TECHNICAL_GUIDE.md  VISUALIZATION_NAMING_PROPOSAL.md
.github/workflows/: macos-ci.yml  macos-system-ci.yml  sonar-source.yml  ubuntu-ci.yml  ubuntu-system-ci.yml
build_std/: recmake_replay.sh
cmake/: BioDynaMo.cmake  bdm-dictionary  utils.cmake
cmake/env/: bdm-config.in  thisbdm.fish  thisbdm.sh
demo/mars/src/: mars.h
demo/newtons_law_test/src/: newtons_law_test.h
demo/radiation_necrosis/: CMakeLists.txt  README.md  bdm.toml
demo/radiation_necrosis/output/radiation_necrosis/: radiation_necrosis.pvsm  simulation_info.json
demo/radiation_necrosis/src/: radiation_necrosis.cc  radiation_necrosis.h  radiation_necrosis_clean.h  radiation_necrosis_complex.h  radiation_necrosis_old.h  radiation_necrosis_stable.h  radiation_necrosis_tumor_reduction.h  radiation_necrosis_v2.h  radiation_necrosis_visual.cc  radiation_necrosis_visual.h
demo/solar_system/src/: solar_system.h
demo/soma_clustering/src/: validation_criterion.h
demo/standalone_vis_demo/: CMakeLists.txt  bdm.toml
demo/standalone_vis_demo/src/: standalone_vis_demo.cc  standalone_vis_demo.h
demo/std_replacements/: CMakeLists.txt  QUICKSTART.md  README.md  build.sh  demo_std_replacements.cc
doc/user_guide/: prerequisites.md
src/: biodynamo.h
src/core/behavior/: stochastic_growth_division.h
src/core/param/: param.h
src/core/util/: random.cc  random.h  random_compat.h  random_hybrid.h  random_std.cc  random_std.h  serialization_std.h
src/core/visualization/: standalone_adaptor.cc  standalone_adaptor.h  visualization_adaptor.cc
src/core/visualization/paraview/: adaptor.cc  generate_pv_state.py
src/core/visualization/standalone/: standalone_visualization_adaptor.cc  standalone_visualization_adaptor.h  vtk_independent_vti_writer.cc  vtk_independent_vti_writer.h  vtk_independent_vtu_writer.cc  vtk_independent_vtu_writer.h
test/unit/core/util/: random_std_test.cc  random_test.cc
util/: valgrind-bdm.supp
util/installation/centos-7/: prerequisites.sh
util/installation/common/: install.sh
util/installation/debian-12/: Dockerfile  package_list_required  prerequisites.sh
util/installation/osx/: package_list_required  prerequisites.sh  setup_env.sh
util/installation/ubuntu-18.04/: prerequisites.sh
util/installation/ubuntu-22.04/: package_list_required  prerequisites.sh
util/installation/ubuntu-24.04/: package_list_extra  package_list_required  prerequisites.sh
util/makefile-build/: bdm-code-generation
